# imgforge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_CHANGES.md  Dockerfile  GEMINI.md  MONITORING.md  Makefile  PRESETS_IMPLEMENTATION.md  PRESET_DOCS_SUMMARY.md  README.md  docker-compose.yml  openapi.yaml  prometheus.yml  release.sh  up.sh
.cargo/: config.toml
.github/workflows/: build.yml  publish.yml  release.yml
.kiro/steering/: product.md  structure.md  tech.md
deployment/: .gitignore  CHANGELOG.md  README.md  SUMMARY.md  TESTING.md  deploy-systemd.sh  deploy.sh  uninstall-systemd.sh  uninstall.sh  upgrade-systemd.sh
doc/: 10.1_deployment_automated.md  10.2_deployment_custom.md  10.2_deployment_manual.md  10_deployment.md  11_contributing.md  11_prometheus_monitoring.md  12_image_processing_pipeline.md  13_resizing_algorithms.md  1_installation.md  2_quick_start.md  2_quickstart.md  3_configuration.md  4_url_structure.md  5.1_resizing_algorithms.md  5.2_presets.md  5_processing_options.md  6_processing_pipeline.md  6_request_lifecycle.md  7_caching.md  8_error_troubleshooting.md  9_performance.md  README.md  RESIZING_ALGORITHMS_SUMMARY.md  RESIZING_ALGORITHM_MIGRATION.md  advanced-topics.md  configuration.md  contributing.md  core-features.md  deployment.md  error-handling.md  getting-started.md  introduction.md  processing-options.md  quick-start.md  url-format.md  usage.md
grafana-dashboards/: dashboard-provisioning.yml  imgforge-dashboard.json
loadtest/: .env.example  .gitignore  EXAMPLE_OUTPUT.md  QUICK_START.md  README.md  SUMMARY.md  cache-performance.js  common.js  processing-endpoint.js  run-test.sh  smoke-test.js  stress-test.js
src/: app.rs  config.rs  constants.rs  fetch.rs  handlers.rs  lib.rs  main.rs  middleware.rs  monitoring.rs  processing.rs  server.rs  service.rs  url.rs  utils.rs
src/caching/: cache.rs  config.rs  error.rs
src/processing/: mod.rs  options.rs  presets.rs  save.rs  tests.rs  tests_support.rs  transform.rs  utils.rs  watermark.rs
src/processing/tests/: effects_tests.rs  exif_tests.rs  options_parse_tests.rs  padding_extend_tests.rs  pipeline_tests.rs  resize_tests.rs  watermark_tests.rs
tests/: README.md  handlers_integration_tests.rs  handlers_integration_tests_extended.rs  presets_integration_tests.rs
